# vproxy

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
kubernetes/deployments/: vproxy.yml
kubernetes/services/: vproxy.yml
src/: database.rs  jwt.rs  main.rs  models.rs  schema.rs
storage/: test.txt
