[package]
name = "vproxy"
version = "0.1.0"
authors = ["Gui Vieira <guilherme.vieira@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rocket = "0.4.10"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["chrono", "postgres"] }
