[package]
name = "vproxy"
version = "0.1.0"
authors = ["Gui Vieira <guialbuk@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "7"
rand = "0.8.4"
regex = "1.5.4"
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
